--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - 3.8
 
 stages:
+  - lint
   # Only execute deployment stage on tagged release commits in the form of "v1.2.3"
   # and from your repository (e.g. not PRs).
   # Also allows alpha/beta releases such as "v1.2.3b2"
@@ -11,6 +12,13 @@ stages:
 
 jobs:
   include:
+    - stage: lint
+      name: Lint
+      install:
+        - python -m pip install pylint
+        - python -m pip install .
+      script: pylint --rcfile .pylint.rc rdl_pygments
+
     # Deploy source distribution
     - stage: deploy
       name: Deploy source distribution
