--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,18 @@
+name: build
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - 'dev/**'
   pull_request:
     branches: [ main ]
+  release:
+    types:
+      - published
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   lint:
@@ -13,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
@@ -28,10 +37,10 @@ jobs:
           pylint --rcfile .pylint.rc rdl_pygments
 
 #-------------------------------------------------------------------------------
-  build_sdist:
+  build:
     needs:
       - lint
-    name: Build source distribution
+    name: Build distributions
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -39,24 +48,33 @@ jobs:
       - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: 3.8
+          python-version: "3.10"
 
-      - name: Build sdist
-        run: python setup.py sdist
+      - name: Install dependencies
+        run: |
+          python -m pip install -U build
+
+      - name: Build
+        run: python -m build
 
       - uses: actions/upload-artifact@v3
         with:
-          path: dist/*.tar.gz
+          path: |
+            dist/*.tar.gz
+            dist/*.whl
 
 #-------------------------------------------------------------------------------
   deploy:
     needs:
-      - build_sdist
+      - build
 
     runs-on: ubuntu-latest
+    environment: release
+    permissions:
+      id-token: write
 
     # Only publish when a GitHub Release is created.
-    if: github.event_name == 'release' && github.event.action == 'published'
+    if: github.event_name == 'release'
     steps:
       - uses: actions/download-artifact@v3
         with:
@@ -64,6 +82,3 @@ jobs:
           path: dist
 
       - uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.pypi_password }}
