--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
+          name: dist
           path: |
             dist/*.tar.gz
             dist/*.whl
@@ -76,9 +77,9 @@ jobs:
     # Only publish when a GitHub Release is created.
     if: github.event_name == 'release'
     steps:
-      - uses: actions/download-artifact@v4.1.7
+      - uses: actions/download-artifact@v4
         with:
-          name: artifact
+          name: dist
           path: dist
 
       - uses: pypa/gh-action-pypi-publish@release/v1
