--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pygments-systemrdl"
 dynamic = ["version"]
+requires-python = ">=3.7"
 dependencies = [
     "pygments",
 ]
@@ -14,15 +15,15 @@ authors = [
 ]
 description = "SystemRDL 2.0 lexer extension for Pygments"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {text = "LGPLv3"}
 keywords = [
     "SystemRDL", "pygments",
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 2",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
